--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "next-sanity": "^4.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2"
+    "react-hook-form": "^7.49.2",
+    "sanity-plugin-asset-source-unsplash": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "daisyui": "^4.6.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.0"
   }
