--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
+    "@vercel/analytics": "^1.2.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.29.3",
     "eslint": "^8.56.0",
