--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "next": "latest",
-    "next-sanity": "^4.1.2",
+    "next-sanity": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "sanity": "^3.35.0",
     "sanity-plugin-asset-source-unsplash": "^1.1.2"
   },
   "devDependencies": {
