--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ next-env.d.ts
 # Env files created by scripts for working locally
 .env
 studio/.env.development
+# Sentry Config File
+.env.sentry-build-plugin
