--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@portabletext/react": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/webhook": "^2.0.0",
+    "@sentry/nextjs": "^10.10.0",
+    "@sentry/node": "^10.10.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
