--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,17 @@
 .pnp.js
 .yarn/install-state.gz
 
+.env.local
+.env
+.env.development
+.env.production
+.env.staging
+.env.test
+.env.development.local
+.env.production.local
+.env.staging.local
+.env.test.local
+
 # testing
 /coverage
 
