--- a/studio/package.json
+++ b/studio/package.json
@@ -11,12 +11,14 @@
     "env": "node copyEnv.js"
   },
   "dependencies": {
-    "sanity": "^3.35.0",
+    "@multidots/sanity-plugin-workflow-manager": "^1.0.5",
     "@sanity/vision": "^3.35.0",
     "prop-types": "^15.7",
     "react": "^18",
     "react-dom": "^18",
+    "sanity": "^3.35.0",
     "sanity-plugin-asset-source-unsplash": "^1.0.6",
+    "sanity-plugin-vercel-deploy": "^4.0.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
